--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "knob"]
 	path = knob
 	url = https://github.com/Kode-Community/knob.git
+[submodule "Libraries/fasmg"]
+	path = Libraries/fasmg
+	url = https://github.com/mundusnine/fasmg.git
